# IV1

./: .gitignore  .gitmodules  CMakeLists.txt  ConstexprSqrt.h  IV1.cpp  IV1BlockImage.h  IV1File.h  IV1dec.cpp  IV1dictview.cpp  IV1enc.cpp  IV1round.cpp  LICENSE.txt  README.md
Support/: PNGLoader.cpp  PNGLoader.h  RGB8Image.h
